--- a/public_html/layout/denim/css_rtl/custom.css
+++ b/public_html/layout/denim/css_rtl/custom.css
@@ -32,3 +32,18 @@
 #centerblocks div.block-child-center {
   margin: 0 0 1.25em 0;
 }
+
+/* Needed for Calendar Submit Event as address wraps and messes layout */
+.form-description {
+	white-space:nowrap;
+
+/* Needed for Calendar Submit Event */}
+.clear-right {
+	clear:right;	
+}
+.clear-left {
+	clear:left;	
+}
+.clear-both {
+	clear:both;	
+}
